--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: rgba(245, 70, 66, 0.75);
+  background-color: rgba(145, 217, 89, 0.8);
   color: #222;
   overflow-x: hidden;
   margin: 0;
@@ -41,7 +41,7 @@ body {
   position: relative;
   width: 200px;
   height: 200px;
-  background: linear-gradient(to right, rgba(245, 70, 66, 0.75), rgba(8, 83, 156, 0.75));
+  background: linear-gradient(to right, rgba(145, 217, 89, 0.8), rgba(41, 77, 153, 0.8));
   border-radius: 50%;
   transition: transform 0.5s linear;
 }
@@ -100,7 +100,7 @@ button:focus {
 }
 
 .top {
-  margin-top: 50px;
+  margin-top: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -109,7 +109,7 @@ button:focus {
 .bgc-circle {
   position: relative;
   width: 15rem;
-  background: linear-gradient(to right, rgba(245, 70, 66, 0.75), rgba(8, 83, 156, 0.75));
+  background: linear-gradient(to right, rgba(145, 217, 89, 0.8), rgba(41, 77, 153, 0.8));
   height: 15rem;
   border-radius: 50%;
 }
@@ -125,13 +125,14 @@ img {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 35px;
+  /* padding: 35px; */
 }
 
 .mid h1 {
   font-size: 2.5rem;
-  margin-top: 0;
+  margin-top: 0px;
   transition: all 0.75s ease-out;
+  text-align: center;
 }
 
 .mid p {
@@ -140,6 +141,7 @@ img {
   font-family: Lato;
   text-align: center;
   transition: all 0.75s ease-out;
+  text-transform: uppercase;
 }
 
 .mid ul {
@@ -163,7 +165,7 @@ img {
 
 .mid li:hover {
   color: white;
-  background-color: #333;
+  background-color: #eb570a;
   cursor: pointer;
 }
 
@@ -177,7 +179,7 @@ img {
   font-family: Lato;
   letter-spacing: 0.1rem;
   padding: 1rem 0rem;
-  background: #f54642;
+  background: rgba(41, 77, 153, 0.8);
   border: none;
   width: 80%;
   color: white;
@@ -226,7 +228,7 @@ nav ul li {
 }
 
 nav ul li:hover {
-  color: black;
+  color: #eb570a;
 }
 
 nav ul li + li {
@@ -247,6 +249,10 @@ nav ul li i {
 .container.show-nav + nav li {
   transform: translateX(0);
   transition-delay: 0.1s;
+}
+
+.type::first-letter {
+  color: #eb570a;
 }
 
 @media (max-width: 480px) {
