--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ img {
   margin-top: 150px;
   font-weight: 600;
   bottom: -55px;
+  left: 35px;
   margin: 25px;
   width: 100%;
   height: 25px;
@@ -213,6 +214,7 @@ nav {
 }
 
 nav ul {
+  margin-left: 35px;
   list-style: none;
   padding-left: 30px;
 }
